Delete upstream gitlab/bitbucket deps
CLOUDBLD-8208

Signed-off-by: Elina Akhmanova <eakhmano@redhat.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "chai": "4.2.0",
     "fecha": "https://github.com/taylorhakes/fecha/archive/91680e4db1415fea33eac878cfd889c80a7b55c7.tar.gz",
-    "npm-test-project": "git+https://gitlab.com/eakhmano-test-group/eakhmano-test-subgroup/subsubgroup/npm-test-project.git",
-    "test-npm-dep": "git+https://elinah@bitbucket.org/elinah/test-npm-dep.git"
+    "is-positive": "github:kevva/is-positive.git",
+    "cachito-yarn-without-deps": "git+https://github.com/cachito-testing/cachito-yarn-without-deps.git"
   }
 }
